fix add product

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
 jwt:
   auth:
     converter:
-      resource-id: rest-users
+      resource-id: api-store
       principle-attribute: preferred_username
 
 keycloak:
